# localectl-chimera

./: .gitignore  README.md  ansi_codes.h  command.c  command.h  generate_introspection.sh  localectl.c  meson.build  org.freedesktop.locale1.xml  parse_args.c  parse_args.h
